--- a/app/src/main/res/drawable/bg_blue_outline.xml
+++ b/app/src/main/res/drawable/bg_blue_outline.xml
@@ -2,10 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="2dp"/>
-            <stroke android:color="#626262"
-                android:width="1dp"/>
-            <solid android:color="@android:color/white"/>
+            <corners android:radius="25dp"/>
+            <solid android:color="@android:color/holo_red_light"/>
         </shape>
     </item>
 </selector>
