--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
-        android:layout_width="295dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@color/colorPrimary"
@@ -25,10 +25,6 @@
         app:itemTextAppearance="@style/NavDrawerTextStyle"
         app:itemTextColor="#fff"
         app:menu="@menu/activity_main_drawer">
-
-
-
-
 
     </com.google.android.material.navigation.NavigationView>
 
