--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,208 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/contentPanel"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg5"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.smartwebarts.mech24ra.MainActivity"
     tools:showIn="@layout/app_bar_main">
-    <LinearLayout
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_10sdp"
-        android:layout_gravity="center_vertical"
-        android:orientation="vertical"
-        >
+        android:layout_height="match_parent">
+
+        <fragment
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navGraph="@navigation/dashboard_navigation" />
 
 
         <LinearLayout
+            android:id="@+id/ll_01_contentLayer_accept_or_reject_now"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:visibility="gone"
+            android:orientation="vertical"
+            android:weightSum="100">
 
-            <RelativeLayout
-                android:id="@+id/openMyProfile"
+
+            <TextView
+                android:id="@+id/txt01Timer"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/roundimage"
+                android:gravity="center"
+                android:text="1"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_16sdp"
+                android:textStyle="bold" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:onClick="profile"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:clickable="true"
+                android:orientation="vertical"
+                android:padding="@dimen/_10sdp">
 
-                <ImageView
-                    style="@style/dashboardImageView"
-                    android:layout_above="@id/textView"
-                    android:src="@drawable/ic_profile" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_80sdp"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/img01User"
+                            android:layout_width="@dimen/_70sdp"
+                            android:layout_height="@dimen/_70sdp"
+                            android:src="@drawable/placeholder_image" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="@dimen/_10sdp"
+                        android:layout_weight="70"
+                        android:gravity="start|center"
+                        android:orientation="vertical"
+                        android:weightSum="100">
+
+                        <TextView
+                            android:id="@+id/txt01UserName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="top"
+                            android:layout_weight="50"
+                            android:gravity="start|center"
+                            android:text="User"
+                            android:textSize="@dimen/_14sdp" />
+
+
+                        <RatingBar
+                            android:id="@+id/rat01UserRating"
+                            style="?attr/ratingBarStyleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_weight="50"
+                            android:isIndicator="true"
+                            android:numStars="5"
+                            android:visibility="gone"
+                            android:rating="5" />
+                    </LinearLayout>
+
+
+                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView"
-                    style="@style/dashboardTextView"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="My Profile" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/openServiceRequest"
-                android:layout_width="match_parent"
-                android:visibility="gone"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-
-                <ImageView
-                    style="@style/dashboardImageView"
-                    android:layout_above="@id/textView1"
-                    android:src="@drawable/ic_service_request" />
+                    android:id="@+id/txtSchedule"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="@dimen/_5sdp"
+                    android:text="Schedule"
+                    android:textSize="@dimen/_12sdp"
+                    android:visibility="gone" />
 
                 <TextView
-                    android:id="@+id/textView1"
-                    style="@style/dashboardTextView"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="Service Request" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/openPaymentHistory"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:onClick="paymentHistory"
-                android:layout_weight="1">
-
-
-                <ImageView
-                    style="@style/dashboardImageView"
-                    android:layout_above="@id/textView2"
-                    android:src="@drawable/ic_payment_history" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/_8sdp"
+                    android:text="@string/pick_up"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/_13sdp"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView2"
-                    style="@style/dashboardTextView"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="Payment History" />
-            </RelativeLayout>
+                    android:id="@+id/txtPickup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:lineSpacingMultiplier="1.2"
+                    android:minLines="2"
+                    android:padding="@dimen/_8sdp"
+                    android:textSize="@dimen/_12sdp"
+                    android:visibility="visible" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="15"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/btn_02_reject"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/button_margin"
+                        android:layout_marginEnd="@dimen/button_gap"
+                        android:layout_weight="1"
+                        android:padding="@dimen/button_padding"
+                        android:text="Reject"
+                        android:textColor="@color/button_text_color" />
+
+                    <Button
+                        android:id="@+id/btn_02_accept"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/button_gap"
+                        android:layout_marginEnd="@dimen/button_margin"
+                        android:layout_weight="1"
+                        android:padding="@dimen/button_padding"
+                        android:text="Accept"
+                        android:textColor="@color/button_text_color" />
+                </LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:orientation="horizontal">
-
-
-            <RelativeLayout
-                android:id="@+id/openWithrawlPayment"
-                android:layout_width="match_parent"
-                android:onClick="OrderHistory"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <ImageView
-                    style="@style/dashboardImageView"
-                    android:layout_above="@id/textView3"
-                    android:src="@drawable/ic_withdrawl_history" />
-
-                <TextView
-                    android:id="@+id/textView3"
-                    style="@style/dashboardTextView"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="Completed Order" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/openGenerateInvoice"
-                android:layout_width="match_parent"
-                android:visibility="gone"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-
-                <ImageView
-                    style="@style/dashboardImageView"
-                    android:layout_above="@id/textView4"
-                    android:src="@drawable/ic_invoice" />
-
-                <TextView
-                    android:id="@+id/textView4"
-                    style="@style/dashboardTextView"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="Generate Invoice" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/openScheduledService"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:onClick="Todayorder"
-                android:layout_weight="1">
-
-
-                <ImageView
-                    style="@style/dashboardImageView"
-                    android:layout_above="@id/textView5"
-                    android:src="@drawable/ic_scheduled_service" />
-
-                <TextView
-                    android:id="@+id/textView5"
-                    style="@style/dashboardTextView"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="Today Order" />
-            </RelativeLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:orientation="horizontal">
-
-            <RelativeLayout
-                android:id="@+id/openServiceRequestHistory"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-
-                <ImageView
-                    style="@style/dashboardImageView"
-                    android:layout_above="@id/textView6"
-                    android:src="@drawable/ic_service_request_history" />
-
-                <TextView
-                    android:id="@+id/textView6"
-                    style="@style/dashboardTextView"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="Pending Order" />
-            </RelativeLayout>
-            <RelativeLayout
-                android:id="@+id/openService"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-
-                <ImageView
-                    style="@style/dashboardImageView"
-                    android:layout_above="@id/textView7"
-                    android:src="@drawable/ic_service_request_history" />
-
-                <TextView
-                    android:id="@+id/textView7"
-                    style="@style/dashboardTextView"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="Service Request History" />
-            </RelativeLayout>
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-</LinearLayout>
+    </FrameLayout>
+</RelativeLayout>
